# ECS165Shenanigans

./: .gitignore  Cargo.toml  README  __main__.py  bench.py  crabstore.pyd  m1_tester.py  m2_1.py  m2_2.py  merge.py  persist_test.py  small_merge_test.py  special_cases.py  tester.py
.github/workflows/: rust.yml
crabstore/: Cargo.toml  pyproject.toml
crabstore/lulz/: crab_dt.CRAB  lolz_db.CRAB  lolz_pd.CRAB
crabstore/meme/: Grades_db.CRAB  Grades_id.CRAB  Grades_pd.CRAB  Grades_rd.CRAB  crab_dt.CRAB
crabstore/src/: bufferpool.rs  crabstore.rs  disk_manager.rs  index.rs  lib.rs  lock_manager.rs  merge.rs  page.rs  page_directory.rs  query.rs  range_directory.rs  record.rs  rid.rs  table.rs  tablepy.rs  transaction.rs  transaction_worker.rs
crabstore/tests/: database_test.rs  merge_test.rs  transaction_tests.rs
crabstorepy/: Cargo.toml
crabstorepy/src/: crabstorepy.rs  lib.rs  recordpy.rs  tablepy.rs
crabstorepy/tests/: database_test_py.rs
lstore/: db.py  index.py  page.py  query.py  table.py
lstore/store/: Cargo.toml  pyproject.toml
lstore/store/src/: db.rs  index.rs  lib.rs  main.rs  table.rs
