[package]
name = "crabstore"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "crabstore"
crate-type = ["cdylib", "rlib"]


[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module", "abi3-py38"] }
rayon  = {version = "1.6.1"}
rkyv = { version = "0.7.40", default-features = false, features=["alloc", "strict", "validation", "size_64", "copy", "copy_unsafe", "std"]}
parking_lot = "0.12.1"
rustc-hash = "1.1.0"
dashmap = "5.4.0"
tempfile = "3.4.0"
serde = {version = "1.0.152", features = ["derive"]}
bincode = "1.3.3"
rand = "0.8.5"

[profile.release-with-debug]
inherits = "release"
debug = true
