[package]
name = "crabstorepy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "crabstore"
crate-type = ["cdylib", "rlib"]

[dependencies]
parking_lot = "0.12.1"
pyo3 = { version = "0.18.0", features = ["extension-module", "abi3-py38"] }
crabcore = { path = "../crabstore" }

[profile.release-with-debug]
inherits = "release"
debug = true
